alterando nome do projeto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "criador-md",
+  "name": "convert-word-to-website",
   "version": "1.0.0",
   "description": "",
   "siteName": "Convert Word To WebSite",
