--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "del": "^3.0.0",
+    "delete-empty": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-copy": "^1.1.0",
