--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "request": "launch",
@@ -60,6 +61,22 @@
             "stopOnEntry": true,
             "args": [
                 "check-access"
+            ],
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": null,
+            "skipFiles": [
+                "${workspaceRoot}/node_modules/**/*.js",
+            ],
+            "env": {}
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "debug gulp tests",
+            "program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
+            "stopOnEntry": true,
+            "args": [
+                "tests"
             ],
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": null,
