--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "gulp default",
     "only-server": "gulp only-server",
     "delete-dist": "gulp deleteDist",
-    "check-access": "gulp check-access"
+    "check-access": "gulp check-access",
+    "tests": "gulp tests"
   },
   "author": "",
   "license": "ISC",
@@ -24,9 +25,13 @@
     "gulp-debug": "^3.2.0",
     "gulp-exec": "^3.0.1",
     "gulp-flatten": "^0.4.0",
+    "gulp-jasmine": "^3.0.0",
+    "gulp-jasmine-node": "^1.0.7",
     "gulp-rename": "^1.2.2",
-    "gulp-run-command": "0.0.9",
     "gulp-webserver": "^0.9.1",
+    "jasmine": "^2.9.0",
+    "jasmine-reporters": "^2.3.0",
+    "jshint": "^2.9.5",
     "linq": "^3.0.9",
     "mammoth": "^1.4.4"
   },
