--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-flatten": "^0.4.0",
     "gulp-jasmine": "^3.0.0",
     "gulp-jasmine-node": "^1.0.7",
+    "gulp-jshint": "^2.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-webserver": "^0.9.1",
     "jasmine": "^2.9.0",
